@@ -51,7 +51,7 @@ namespace ra { namespace test {
 
   TEST_F(TestDemo, testCodeSample)
   {
-    //create a dummy file
+    //create a dummy file based on current gtest name
     static const int FILE_SIZE = 1000; //bytes
     const std::string path = ra::gtesthelp::getTestQualifiedName() + ".tmp"; //returns "TestDemo.testCodeSample.tmp"
     ASSERT_TRUE( ra::gtesthelp::createFile(path.c_str(), FILE_SIZE) );
@@ -62,15 +62,15 @@ namespace ra { namespace test {
     ASSERT_TRUE ( ra::gtesthelp::isFileEquals( expectedFile.c_str(), generatedFile.c_str()) );
 
     //split a string into multiple parts
-    StringVector words = ra::strings::splitString("The quick brown fox jumps over the lazy dog", " ");
-    size_t numWords = words.size();
+    StringVector words = ra::strings::split("The quick brown fox jumps over the lazy dog", " ");
+    size_t numWords = words.size(); //returns 9
 
     //converting numeric values to string
     std::string IntMaxStr = ra::strings::toString(UINT64_MAX); //returns "18446744073709551615"
 
-    //search and replace in strings
+    //execute search and replace in strings
     std::string whoiam = "My name is Antoine and I am a superhero.";
-    int numReplaced = ra::strings::replace(whoiam, "hero", "vilan");
+    int numReplaced = ra::strings::replace(whoiam, "hero", "vilan"); //returns 1
   }
 
 } //namespace test
